--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "mchProject",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon app.js -e ejs",
+    "watch": "nodemon --ext ejs"
+  },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
+    "livereload": "^0.9.3",
     "node-sass-middleware": "^1.0.1",
     "nunjucks": "^3.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
