--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "watch": "nodemon --ext ejs"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
     "livereload": "^0.9.3",
     "node-sass-middleware": "^1.0.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
